# Timetracker-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/support/: mod.rs
