[package]
name = "timetracker"
version = "0.1.0"
authors = ["Miniwoffer <odinhorst@hotmail.com>"]

[dependencies]
conrod = { version = "^0.57.0",features = ["winit","glium"] }
find_folder = "^0.3.0"
chrono = { version = "^0.4", features = ["serde"] }
rand = "*"

serde_derive = "^1.0.27"
serde = "^1.0.27"
serde_json = "^1.0.10"